--- a/index.html
+++ b/index.html
@@ -62,15 +62,19 @@
                         <div class="speaker">
                             <img src="images/speaker1.png" alt="" class="image"/>
                             <div class="inner">
-                                <h4>1人目: 未定</h4>
-                                <p>1人目のプロフィール</p>
+                                <!--TODO :プロフィール画像を受け取ったら更新する-->
+                                <h4>いろふさん</h4>
+                                <p>大阪を中心に仕事している、プログラマです。</p>
+                                <p>関西javaエンジニアの会の人。</p>
+                                <p>主にwebアプリの開発を開発してます。</p>
                             </div>
                         </div>
                         <div class="speaker">
                             <img src="images/speaker2.png" alt="" class="image"/>
                             <div class="inner">
-                                <h4>2人目: 未定</h4>
-                                <p>2人目のプロフィール</p>
+                                <h4>うらがみさん</h4>
+                                <p>大阪のプログラマーです。 GitHubを利用してます。</p>
+                                <p>一年間コミットしてプロフィールページを緑一色にしたことあります</p>
                             </div>
                         </div>
                     </article>
