スピーカー名を変更

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <div class="speaker">
                             <img src="images/speaker2.png" alt="" class="image"/>
                             <div class="inner">
-                                <h4>うらがみさん</h4>
+                                <h4>やがみさん</h4>
                                 <p>大阪のプログラマーです。 GitHubを利用してます。</p>
                                 <p>一年間コミットしてプロフィールページを緑一色にしたことあります</p>
                             </div>
