僕がキラだ！

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
                             <img src="images/speaker2.png" alt="" class="image"/>
                             <div class="inner">
                                 <h4>やがみさん</h4>
-                                <p>大阪のプログラマーです。 GitHubを利用してます。</p>
-                                <p>一年間コミットしてプロフィールページを緑一色にしたことあります</p>
+                                <p>僕がキラだ！</p>
+                                <p>こなばなな</p>
                             </div>
                         </div>
                     </article>
