--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
                         <div class="speaker">
                             <img src="images/speaker1.png" alt="" class="image"/>
                             <div class="inner">
-                                <h4>いろふさん</h4>
-                                <p>大阪を中心に仕事している、プログラマです。</p>
-                                <p>関西javaエンジニアの会の人。</p>
-                                <p>主にwebアプリの開発を開発してます。</p>
+                                <h4>Lさん</h4>
+                                <p>私はLです</p>
+                                <p>世界一の名探偵</p>
+                                <p>キラは犯罪者だ！</p>
                             </div>
                         </div>
                         <div class="speaker">
