--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <div class="speaker">
                             <img src="images/speaker2.png" alt="" class="image"/>
                             <div class="inner">
-                                <h4>やがみさん</h4>
+                                <h4>ライトくん</h4>
                                 <p>僕がキラだ！</p>
                                 <p>こなばなな</p>
                             </div>
@@ -102,7 +102,7 @@
                                 </tr>
                                 <tr>
                                     <td>20:00〜20:45</td>
-                                    <td>実践Git（やがみさん）</td>
+                                    <td>実践Git（ライトくん）</td>
                                 </tr>
                                 <tr>
                                     <td>20:45〜21:00</td>
